--- a/index.html
+++ b/index.html
@@ -7,13 +7,9 @@
     <!-- Your code here! -->
   </head>
 
-  <body bgcolor="#00b3e6">
+  <body>
   
-    <div { width="700px"
-         Margin="auto"
-         font-family="Helvetica Neue"
-         background="white"
-         padding="30px"}>
+    <div>
       <h1 id='main-header'>How Does Writing CSS Differ From Writing HTML?</h1>
       <p>As we write CSS these are the type of questions we might ask ourselves:</p>
 
